--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ img{
     color:white;
     font-size: inherit;
     border-radius: 5px;
+    text-align: center;
 }
 .nav{
     height:100%;
@@ -21,6 +22,7 @@ img{
     font-size: 20px;
     text-align:right;
     margin-left: 5%;
+    position: fixed;
     
 }
 .banner{
@@ -29,7 +31,7 @@ img{
     padding-right: 25px;
     margin-bottom: 15px;
     text-align: left;
-    position: fixed;
+    position: static;
     
 }
 .logo{
